[gd_scene load_steps=3 format=3 uid="uid://cju7080xvhua4"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_qgalp"]
[ext_resource type="Texture2D" uid="uid://egvo6paulg10" path="res://assets/sprites/background.svg" id="2_nk2m7"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qgalp")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_nk2m7")
expand_mode = 1
stretch_mode = 6

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Boomerang Bounce"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -180.0
offset_right = 100.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "High Score: 0"
horizontal_alignment = 1

[node name="InstructionsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -130.0
offset_right = 220.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2

[node name="InstructionsLabel" type="Label" parent="InstructionsPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "How to Play"
horizontal_alignment = 1

[node name="Instructions" type="RichTextLabel" parent="InstructionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 40.0
offset_right = -20.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[b]Desktop Controls:[/b]
• Move Left/Right: Arrow Keys or A/D
• Jump: Space, W, or Up Arrow
• Double Jump: Press Jump again in mid-air
• Restart: R Key

[b]Mobile Controls:[/b]
• Move Left/Right: Touch left/right side of screen
• Jump & Double Jump: Touch upper part of screen
• Restart: Tap Play Again button

[b]Goal:[/b] Avoid obstacles by moving between lanes and jumping. Score increases for each obstacle you pass."

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 100.0
offset_right = 100.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "Play"

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 170.0
offset_right = 100.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Quit"
